crates/eden-model/tests/snapshots/should_insert_new_mod_token.snap
---
source: crates/eden-model/src/tables/tokens.rs
expression: token
input_file: crates/eden-model/tests/snapshots
---
Token {
    id: 00000000-0000-0000-0000-000000000000,
    created_at: Timestamp(
        1970-01-01T00:00:00Z,
    ),
    last_used_at: None,
    name: "test_token",
    hashed: "0424974c68530290458c8d58674e2637f65abc127057957d7b3acbd24c208f93",
    member_id: None,
    kind: McServer,
    permissions: Some(
        PermissionScope(
            0x0,
        ),
    ),
    authorized_by: "test_function",
    expires_at: None,
    revoked: false,
}
